<resources>
    <string name="app_name">Bookstore management system</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">Welcome, Administrator！</string>
    <string name="QuickLook_Btn">Quick Lookup</string>
    <string name="CustomerInformation_Btn">Customer Information</string>
    <string name="InventoryInformation_Btn">Inventory Information</string>
    <string name="OrderInformation_Btn">Order Information</string>
    <string name="SupplierInformation_Btn">Supplier Information</string>
    <string name="ShipmentInformation_Btn">Shipment Information</string>
    <string name="CustomerID_Btn">Customer ID</string>
    <string name="OR">OR</string>
    <string name="CustomerFirstName">Customer First Name</string>
    <string name="CustomerLastName">Customer Last Name</string>
    <string name="query">Query</string>
    <string name="showresult_btn">Show Result</string>
    <string name="goBack_btn">Back to Main Page</string>
    <string name="title_checkoutlist">Check Out Record</string>
    <string name="CheckOutList_Btn">Please Quick Lookup</string>
    <string name="Search_Btn">Search</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="Add">Add</string>
    <string name="BackToMainPage">Go Back</string>
    <string name="Customerinformation_title">Customer Information Management</string>
    <string name="title_activity_quick_look_">Quick Lookup</string>
    <string name="title_activity_customer">CustomerActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Login Screen</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="Login">Login:</string>
    <string name="attempts">Attempts Left:</string>
    <string name="OrderID">Order ID</string>
    <string name="OrderIDSearchBtn">Search</string>
    <string name="ViewOrderBtn">View Order</string>
    <string name="SupplierName">Supplier Name</string>
    <string name="ViewSupplierShipment">View</string>
    <string name="ViewAllShipmemtBtn">ViewAllShipmentBtn</string>
    <string name="ViewShipmentBtn">View All Shipments</string>
    <string name="ProductIDBtn">Product ID</string>
    <string name="ViewSupplier">View Supplier</string>
    <string name="ViewAllSupplier">View All Suppliers</string>
    <string name="ProductID">Product ID</string>
    <string name="ProductIDInventoryBtn">Product ID</string>
    <string name="ViewInventory">View Inventory</string>
    <string name="BrandName">Brand Name</string>
    <string name="ViewInventoryBtn">View Inventory</string>
    <string name="BranchNameBtn">Branch Name</string>
    <style name="DefaultButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>
    <string name="query_prompt">Choose a query</string>
    <string-array name="query_array">
        <item>List quantatity of sale by categories</item>
        <item>List the products which need to be supply later</item>
        <item>List the books bought by female customers</item>
        <item>List the books bought by male customers</item>
        <item>List the sale for every month</item>
    </string-array>
    <string name="lookup_title">Quick Lookup Report</string>
    <string-array name="acc_type">
        <item>Branch</item>
        <item>Staff</item>
        <item>Supplier</item>
        <item>Product</item>
        <item>Customer</item>
    </string-array>
    <string name="customize_title">Customerize query</string>
    <string name="customize_Add">Customer Add</string>

</resources>
